--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches: [ "main" ]    
 env:
-  AZURE_WEBAPP_NAME = webappscstrategy
+  AZURE_WEBAPP_NAME = webapp-scstrategy-app
 
 jobs:
   build:
