--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,14 +3,15 @@
 
 name: .NET
 
+env:
+  AZURE_WEBAPP_NAME: webapp-scstrategy-app
+
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]    
-env:
-  AZURE_WEBAPP_NAME = webapp-scstrategy-app
-
+    
 jobs:
   build:
 
